--- a/app/views/years/_nav.html.erb
+++ b/app/views/years/_nav.html.erb
@@ -23,10 +23,10 @@ tabs = [
 </ul>
 <br/>
 <p class="small">
-  La promotion <%= link_to @year.first_year_promotion, @year.first_year_promotion %> est en première année.<br>
-  La promotion <%= link_to @year.second_year_promotion, @year.second_year_promotion %> est en seconde année.<br>
+  <%= link_to @year.first_year_promotion, @year.first_year_promotion if @year.first_year_promotion %> en première année.<br>
+  <%= link_to @year.second_year_promotion, @year.second_year_promotion if @year.second_year_promotion %> en seconde année.<br>
   <% if @year.third_year_promotion %>
-  La promotion <%= link_to @year.third_year_promotion, @year.third_year_promotion %> est en troisième année.<br>
+    <%= link_to @year.third_year_promotion, @year.third_year_promotion %> en troisième année.<br>
   <% end %>
   <% if can? :edit, @year.first_year_promotion %>
     Pour actualiser l'EDT depuis Google, cliquez sur la promotion concernée.
