--- a/app/views/years/projects/index.html.erb
+++ b/app/views/years/projects/index.html.erb
@@ -9,17 +9,16 @@
             method: :post,
             class: 'btn btn-primary btn-sm' if can? :create, Project %>
 
-<div id='timeline' style="width: 100%; height: 600px"></div>
-<script type="text/javascript">
-  var data = <%= { events: @year.projects.collect(&:to_event) }.to_json.html_safe %>;
-  var config = { language: 'fr', initial_zoom: 1 };
-  new TL.Timeline('timeline', data, config);
-</script>
-
 <% Semester.all.each do |semester| %>
   <h3><%= link_to semester, year_semester_path(year_id: @year.id, id: semester) %></h3>
   <% projects = @year.projects.in_semester(semester) %>
   <p><%= projects.count %> projets</p>
+  <div id='timeline-s<%= semester.id %>' style="width: 100%; height: 600px"></div>
+  <script type="text/javascript">
+    var data = <%= { events: projects.collect(&:to_event) }.to_json.html_safe %>;
+    var config = { language: 'fr', initial_zoom: 1 };
+    new TL.Timeline('timeline-s<%= semester.id %>', data, config);
+  </script>
   <table class="table table-hover">
     <thead>
       <tr>
