--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -19,11 +19,11 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-md-6 offset-md-3">
           <%= yield %>
-          <%= bootstrap_flash %>
         </div>
       </div>
     </div>
+    <%= render 'application/toastr' %>
   </body>
 </html>
