--- a/app/views/years/_nav.html.erb
+++ b/app/views/years/_nav.html.erb
@@ -4,8 +4,7 @@ tabs = [
   ['Interventions', year_involvements_path(year_id: @year.id)],
   ['Ressources', year_resources_path(year_id: @year.id)],
   ['Modules', year_teaching_modules_path(year_id: @year.id)],
-  ['Equipe', year_users_path(year_id: @year.id)],
-  ['Semestres (couverture des objectifs)', year_semesters_path(year_id: @year.id)]
+  ['Equipe', year_users_path(year_id: @year.id)]
 ]
 %>
 
