--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,9 +1,6 @@
-<%= bootstrap_devise_error_messages! %>
-<div class="panel panel-default devise-bs">
-  <div class="panel-heading">
+<div class="card devise-bs">
+  <div class="card-body">
     <h4><%= t('.resend_unlock_instructions', default: 'Resend unlock instructions') %></h4>
-  </div>
-  <div class="panel-body">
     <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post, html: { role: "form" } }) do |f| %>
       <div class="form-group">
         <%= f.label :email %>
