--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,9 +1,6 @@
-<%= bootstrap_devise_error_messages! %>
-<div class="panel panel-default devise-bs">
-  <div class="panel-heading">
+<div class="card devise-bs">
+  <div class="card-body">
     <h4><%= t('.change_your_password', default: 'Change your password') %></h4>
-  </div>
-  <div class="panel-body">
     <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, role: 'form' }) do |f| %>
       <%= f.hidden_field :reset_password_token %>
 
@@ -19,6 +16,6 @@
 
       <%= f.submit t('.change_my_password', default: 'Change my password'), class: 'btn btn-primary' %>
     <% end %>
+    <%= render 'devise/shared/links' %>
   </div>
 </div>
-<%= render 'devise/shared/links' %>
