--- a/app/views/application/_td_percent.html.erb
+++ b/app/views/application/_td_percent.html.erb
@@ -1,13 +1,11 @@
 <% if percent %>
   <%
-  if percent < -30
+  if percent < 0
     color_class = 'bg-danger text-white'
-  elsif percent < -20
+  elsif percent > 200
     color_class = 'bg-warning'
-  elsif percent < 20
-    color_class = ''
   else
-    color_class = 'bg-info'
+    color_class = ''
   end
   %>
   <td class="<%= color_class %>">
