--- a/app/assets/stylesheets/application/_layout.sass
+++ b/app/assets/stylesheets/application/_layout.sass
@@ -1,7 +1,7 @@
 body
   background-size: cover
   background-attachment: fixed
-  background-image: asset-url('background.png')
+  background-image: asset-url('background.jpg')
   background-position: center
 
 .text-xl
@@ -104,7 +104,7 @@ main
 body.devise
   background-size: cover
   background-attachment: fixed
-  background-image: asset-url('background.png')
+  background-image: asset-url('background.jpg')
   background-position: center
   .logo
     margin: 50px auto
