--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -5,8 +5,8 @@
       <p>Teach</p>
     </div>
     <p class="version">
-      <strong>Version 2.5</strong><br/>
-      Hogwarts Legacy
+      <strong>Version 2.6</strong><br/>
+      A Plague Tale : Requiem
     </p>
     <% if current_user %>
       <%= link_to('Déconnexion', destroy_user_session_path, method: :delete, class: 'btn btn-primary btn-sm') %>
